# SPHNJ_CPU

./: CMakeLists.txt  README.md
cases/dam_break/: CMakeLists.txt
cases/dam_break/config/: input.ini
cases/dam_break/src/: particle_generate.cpp
config/: input.ini
include/: calculation.h  cell.h  config.h  domain.h  global.h  kernel.h  output.h  parameter.h  particle.h  physics.h  properties.h  sim.h  sim_time.h  type.h
src/: calculation.cpp  config.cpp  domain.cpp  fluid.cpp  kernel.cpp  main.cpp  output.cpp  pair.cpp  parameter.cpp  physics.cpp  properties.cpp  sim.cpp  sim_time.cpp  solid.cpp  virt.cpp
